fixed spacing issues

--- a/src/App.css
+++ b/src/App.css
@@ -600,7 +600,9 @@ input[type='radio']:checked {
   width: 400px;
   max-width: 400px;
 }
-
+.payment-gateway {
+  filter: grayscale(1);
+}
 @media screen and (max-width: 768px) {
   .map-img {
     display: none;
